# Internship

BeagleBone_Black/: led_toggle.py  sequence_led.py
Raspberry_Pi_Pico/: blink.c  blink.py  button_ledBlink.c  pattern_blinking.c  temp.py  uart_reciever.c  uart_sender.c  using_interrupts.c
pico_uart_board1/: CMakeLists.txt  main.c
pico_uart_board2/: CMakeLists.txt  main.c
